--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Oswald", sans-serif;
     margin: 0 auto;
@@ -13,11 +17,8 @@ body {
 }
 
 /*----------HEADER - H1 - ------*/
-div.head {
-    background-image: url("../img/flag.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-origin: border-box;
+header {
+    grid-column: 1/13;
 }
 
 /*--------------Wrapper----------*/
@@ -25,10 +26,13 @@ div.head {
 div#wrapper {
     margin: 0 auto;
     display: grid;
+    max-width: 960px;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: minmax(5rem, auto);
+    grid-gap: 0.5rem;
 }
 
 h1 {
-    margin-bottom: 0.5rem;
     color: rgb(70, 62, 62);
     text-align: center;
     line-height: 2rem;
@@ -37,9 +41,31 @@ h1 {
     padding: 1rem;
     font-variant: small-caps;
     background-color: white;
+    text-shadow: 2px 2px 0px #a4a4a4b0;
 }
 
 /*----------MENU-----------*/
+
+#aktiv-page-name {
+    align-self: center;
+    justify-self: center;
+    grid-column: 2/4;
+    color: white;
+    letter-spacing: 0.75rem;
+    font-weight: 400;
+    font-size: 2.5rem;
+    font-family: "Luxurious Script", cursive;
+    text-shadow: 4px 3px 4px #a4a4a4;
+}
+
+#ham-and-actual-page {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+nav {
+    grid-column: 1/13;
+}
 
 nav ul li {
     border-bottom: solid 1px #0c4f48;
@@ -106,5 +132,101 @@ div.line-three-animation {
 }
 
 /*----------SECTION-----------*/
-section#main {
+
+section h2 {
+    text-align: center;
+    border-top: solid 1px white;
+    padding: 1rem;
+}
+
+section {
+    grid-column: 1/10;
+    margin: 0.35rem 0.5rem;
+}
+
+div#second-paragraph {
+    background-color: white;
+    margin: 1rem;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+}
+
+aside#social-media {
+    grid-column: 12/13;
+    max-height: 22vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: white;
+    transition: all 0.6s ease-in-out;
+    margin-top: 2rem;
+    padding: 0.5rem;
+    border-top-left-radius: 0.75rem;
+    border-bottom-left-radius: 0.75rem;
+    position: sticky;
+    top: 0;
+    -webkit-box-shadow: -6px 5px 10px 3px rgba(255, 255, 255, 0.2);
+    box-shadow: -6px 5px 10px 3px rgba(255, 255, 255, 0.2);
+}
+
+aside#social-media a {
+    text-decoration: none;
+    color: #0c4f48;
+}
+
+.slideIn {
+    transform: scale(1.2);
+    transition: all 0.6s ease-in-out;
+}
+
+/*---------FOOTER--------*/
+
+footer {
+    background-color: white;
+    grid-column: 1/13;
+    bottom: 0;
+    position: sticky;
+    padding: 0.35rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+}
+
+footer div#house-icon a {
+    text-decoration: none;
+    color: #0c4f48;
+}
+
+footer a {
+    text-decoration: none;
+}
+
+div#house-icon i {
+    border: solid 2px #0c4f48;
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+
+footer div#house-icon {
+    color: #0c4f48;
+    text-align: center;
+}
+
+div#house-icon i:hover {
+    background-color: #0c4f48;
+    color: white;
+}
+
+h4 {
+    text-align: center;
+    font-family: "Luxurious Script", cursive;
+    font-size: 1.75rem;
+    font-weight: 200;
+}
+
+#email-adress,
+#telefon {
+    font-size: 0.85rem;
+    text-align: center;
 }
