--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html {
 body {
     font-family: "Oswald", sans-serif;
     margin: 0 auto;
-    background-color: #0c4f48;
+    background-color: white;
 }
 
 /*----------HEADER - H1 - ------*/
@@ -28,19 +28,19 @@ div#wrapper {
     display: grid;
     max-width: 960px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: minmax(5rem, auto);
+    grid-template-rows: minmax(3rem, auto);
     grid-gap: 0.5rem;
 }
 
 h1 {
-    color: rgb(70, 62, 62);
+    color: #7c1034f8;
     text-align: center;
     line-height: 2rem;
     letter-spacing: 0.25rem;
     font-family: "Oswald", sans-serif;
     padding: 1rem;
     font-variant: small-caps;
-    background-color: white;
+    background-color: #ffffff;
     text-shadow: 2px 2px 0px #a4a4a4b0;
 }
 
@@ -50,9 +50,9 @@ h1 {
     align-self: center;
     justify-self: center;
     grid-column: 2/4;
-    color: white;
+    color: #0c4f48;
     letter-spacing: 0.75rem;
-    font-weight: 400;
+    font-weight: 600;
     font-size: 2.5rem;
     font-family: "Luxurious Script", cursive;
     text-shadow: 4px 3px 4px #a4a4a4;
@@ -65,6 +65,8 @@ h1 {
 
 nav {
     grid-column: 1/13;
+    border-bottom: solid 1px #0c4f48;
+    border-top: solid 1px #0c4f48;
 }
 
 nav ul li {
@@ -109,8 +111,8 @@ div.hamburger-line {
     width: 2.5rem;
     border-radius: 5rem;
     height: 3px;
-    color: white;
-    background-color: rgb(255, 255, 255);
+    color: #0c4f48;
+    background-color: #0c4f48;
     padding: 0.05rem;
     margin: 0.45rem;
     transition: 0.4s ease-in-out;
@@ -145,10 +147,11 @@ section {
 }
 
 div#second-paragraph {
-    background-color: white;
+    background-color: #0c4f48;
     margin: 1rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
+    color: white;
 }
 
 aside#social-media {
@@ -157,7 +160,7 @@ aside#social-media {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: white;
+    background-color: #7c1034f8;
     transition: all 0.6s ease-in-out;
     margin-top: 2rem;
     padding: 0.5rem;
@@ -165,13 +168,13 @@ aside#social-media {
     border-bottom-left-radius: 0.75rem;
     position: sticky;
     top: 0;
-    -webkit-box-shadow: -6px 5px 10px 3px rgba(255, 255, 255, 0.2);
-    box-shadow: -6px 5px 10px 3px rgba(255, 255, 255, 0.2);
+    -webkit-box-shadow: -6px 5px 10px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: -6px 5px 10px 3px rgba(0, 0, 0, 0.3);
 }
 
 aside#social-media a {
     text-decoration: none;
-    color: #0c4f48;
+    color: #ffffff;
 }
 
 .slideIn {
@@ -191,6 +194,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-between;
+    border-top: solid 1px #0c4f48;
 }
 
 footer div#house-icon a {
@@ -203,7 +207,7 @@ footer a {
 }
 
 div#house-icon i {
-    border: solid 2px #0c4f48;
+    border: solid 1px #0c4f48;
     padding: 0.5rem;
     border-radius: 50%;
 }
