--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,8 @@ nav {
     grid-column: 1/13;
     border-bottom: solid 1px #0c4f48;
     border-top: solid 1px #0c4f48;
+    -webkit-box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.37);
+    box-shadow: 0px 5px 6px 0px rgba(0, 0, 0, 0.37);
 }
 
 nav ul li {
@@ -195,6 +197,8 @@ footer {
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-between;
     border-top: solid 1px #0c4f48;
+    -webkit-box-shadow: 0px -6px 6px 0px rgba(0, 0, 0, 0.37);
+    box-shadow: 0px -6px 6px 0px rgba(0, 0, 0, 0.37);
 }
 
 footer div#house-icon a {
