--- a/css/style.css
+++ b/css/style.css
@@ -188,8 +188,8 @@ aside#social-media a:hover {
     color: white;
 }
 
-.slideIn {
-    transform: scale(1.2);
+aside#social-media:hover {
+    transform: scale(1.1);
     transition: all 0.6s ease-in-out;
 }
 
@@ -203,6 +203,7 @@ footer {
     padding: 0.35rem;
     width: 100%;
     display: grid;
+    overflow: hidden;
     grid-template-columns: repeat(3, 1fr);
     justify-content: space-between;
     border-top: solid 1px #0c4f48;
@@ -219,18 +220,18 @@ footer a {
     text-decoration: none;
 }
 
-div#house-icon i {
+div.house-icon i {
     border: solid 1px #0c4f48;
     padding: 0.5rem;
     border-radius: 50%;
 }
 
-footer div#house-icon {
+footer div.house-icon {
     color: #0c4f48;
     text-align: center;
 }
 
-div#house-icon i:hover {
+div.house-icon i:hover {
     background-color: #0c4f48;
     color: white;
 }
