--- a/css/jobs.css
+++ b/css/jobs.css
@@ -36,3 +36,13 @@ p.second-p {
     font-size: 1.25rem;
     background: #0c4f48;
 }
+
+@media screen and (min-width: 614px) {
+    p.second-p {
+        font-size: 1rem;
+        width: 75%;
+        margin: 0 auto;
+    }
+
+    
+}
