--- a/css/tartomany.css
+++ b/css/tartomany.css
@@ -40,3 +40,10 @@ div#advertise:hover {
     transform: scale(1.05);
     transition: all 0.6s ease-in-out;
 }
+
+@media screen and (min-width: 614px) {
+    section.second-paragraph {
+        grid-column: 1/13;
+        width: 100%;
+    }
+}
